Added use wifi and motion sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ lib_deps =
 	m5stack/M5Core2@^0.1.2
 	bblanchon/ArduinoJson@^6.19.4
 	256dpi/MQTT@^2.5.0
+	fastled/FastLED@^3.5.0
+
 monitor_speed = 115200
